add scaler to yuval's code

--- a/code/3_Logisitic_Regression_Model_run_yuval.ipynb
+++ b/code/3_Logisitic_Regression_Model_run_yuval.ipynb
@@ -49,7 +49,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -109,7 +109,7 @@
         "\n",
         "FILE = \"enriched_labeled_dataset_large.json\""
       ],
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -140,7 +140,7 @@
         "\n",
         "print(\"FILE PULLED\")"
       ],
-      "execution_count": 4
+      "execution_count": 3
     },
     {
       "cell_type": "code",
@@ -153,28 +153,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {},
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "AttributeError",
-          "evalue": "module 'py_3.sim_matrix_3' has no attribute 'base_authors'",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-6-1405048c9a47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_core\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msim_matrix_3\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbase_authors\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muse_case\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"base_da\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-            "\u001b[0;31mAttributeError\u001b[0m: module 'py_3.sim_matrix_3' has no attribute 'base_authors'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "df_core = sim_matrix_3.base_authors(df,use_case = \"base_da\")"
+        "#df_core = sim_matrix_3.base_authors(df,use_case = \"base_da\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -183,7 +171,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -192,17 +180,17 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 10,
       "metadata": {},
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": "0%|          | 0/13 [00:00<?, ?it/s]Running Yuval's DBscan\n\nComparing Authors\n\nComparing Mesh\n\n100%|██████████| 13/13 [00:00<00:00, 87.50it/s]Comparing Forenames\n\nComparing Institutions\n\nComparing Emails\n\nComparing Countries\n\ncluster_counts:\n 1    7\n 0    5\n-1    1\nName: cluster, dtype: int64\nFor this clustering, N=13\n1 instances, or 7.6923076923076925 percent, were clustered as noise\ntop cluster is 53.84615384615385 percent of the total\nhandled 13 papers\niteration time: 0.00022029876708984375\n\n"
+          "text": "0%|          | 0/13 [00:00<?, ?it/s]Running Yuval's DBscan\n\nComparing Authors\n\nComparing Mesh\n\n100%|██████████| 13/13 [00:00<00:00, 123.72it/s]Comparing Forenames\n\nComparing Institutions\n\nComparing Emails\n\nComparing Countries\n\ncluster_counts:\n 1    7\n 0    5\n-1    1\nName: cluster, dtype: int64\nFor this clustering, N=13\n1 instances, or 7.6923076923076925 percent, were clustered as noise\ntop cluster is 53.84615384615385 percent of the total\nhandled 13 papers\niteration time: 0.00013303756713867188\n\n"
         }
       ],
       "source": [
-        "clusters_df=yuval_dbscan.run_db_scan(df_core)"
+        "clusters_df=yuval_dbscan.run_db_scan(df_core, scaler=None)"
       ]
     },
     {
@@ -227,25 +215,6 @@
       ],
       "source": [
         "df_eval = metric_eval_2.get_metrics(clusters_df,verbose=True)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 16,
-      "metadata": {},
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "SyntaxError",
-          "evalue": "invalid syntax (<ipython-input-16-4f5df513abc3>, line 1)",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-16-4f5df513abc3>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    [ 0.1   0.11 -0.02 -0.04 -0.14 -0.1 ]\u001b[0m\n\u001b[0m               ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-          ]
-        }
-      ],
-      "source": [
-        "[ 0.1   0.11 -0.02 -0.04 -0.14 -0.1 ]\n",
-        "author, mesh, inst, email, country, forename"
       ]
     },
     {
