Removed duplicates of PI_IDS with same pmid and last_author_name

--- a/code/1_merged_datasets_for_labeled_data.ipynb
+++ b/code/1_merged_datasets_for_labeled_data.ipynb
@@ -51,10 +51,10 @@
       "metadata": {
         "id": "Yym1cREsbgcZ",
         "colab_type": "code",
-        "outputId": "5cb8c95d-6423-4dc0-95c4-5d098345da49",
+        "outputId": "47829088-d586-49d5-8e03-fa78159c74ed",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
+          "height": 68
         }
       },
       "source": [
@@ -71,7 +71,7 @@
         "\n",
         "%cd /content/AYP/code"
       ],
-      "execution_count": 2,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
@@ -99,16 +99,16 @@
       "metadata": {
         "id": "enw7L2BAZnpG",
         "colab_type": "code",
+        "outputId": "8d31fb72-19a2-4583-b6a9-e24625003ca9",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "faaba7de-2579-49a4-b57b-37eab07bd0e5"
+          "height": 34
+        }
       },
       "source": [
-        "%cd /content/AYP/code"
+        "%cd code"
       ],
-      "execution_count": 3,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -124,11 +124,11 @@
       "metadata": {
         "id": "qAgD483hbxQk",
         "colab_type": "code",
+        "outputId": "325ff8b1-9d9e-4dd5-8597-5d3026c8304a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 72
-        },
-        "outputId": "ab44494d-f050-4f8d-8df9-73afef7bbff9"
+          "height": 71
+        }
       },
       "source": [
         "from boto.s3.connection import S3Connection\n",
@@ -144,7 +144,7 @@
         "PATH = \"data/labeled_dataset/\"\n",
         "FILE = \"NIH_postcleaning_large.csv\""
       ],
-      "execution_count": 4,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -159,44 +159,19 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4stL4Z-bsVfi",
-        "colab_type": "code",
-        "outputId": "06aac731-27c5-4dd7-f785-9b67dda39919",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 35
-        }
-      },
-      "source": [
-        "%cd code"
-      ],
-      "execution_count": 25,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP/code\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "43Y6-gmsO7Q_",
         "colab_type": "code",
+        "outputId": "bfab15f0-ae20-4e57-cd47-47d5aefe9cbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
-        },
-        "outputId": "6942ba99-bc05-4d99-c82d-4b5f882e27b4"
+          "height": 34
+        }
       },
       "source": [
         "import importlib\n",
         "importlib.reload(utils)"
       ],
-      "execution_count": 5,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -208,7 +183,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 5
+          "execution_count": 18
         }
       ]
     },
@@ -217,11 +192,11 @@
       "metadata": {
         "id": "oSixCsaPqmar",
         "colab_type": "code",
+        "outputId": "6893a440-4abe-4f03-fd2c-536f9d418fdd",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 69
-        },
-        "outputId": "ead18ea8-17c6-468e-a2c5-63ad74bec3bd"
+          "height": 68
+        }
       },
       "source": [
         "if os.path.exists(PATH + FILE):\n",
@@ -244,7 +219,7 @@
         "df_aca_nr = utils.get_dataframe_from_s3(file=\"academix_not_enriched.csv\")\n",
         "df_aca_nr.drop('Unnamed: 0',axis=1, inplace=True)"
       ],
-      "execution_count": 5,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -272,16 +247,16 @@
       "metadata": {
         "id": "Wv6uwVXYTN1g",
         "colab_type": "code",
+        "outputId": "dae8fc33-02de-4851-9214-adde78077dc5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 202
-        },
-        "outputId": "39817754-44c9-4ce0-ff37-074ddfcc1786"
+          "height": 204
+        }
       },
       "source": [
         "df_nih.head()"
       ],
-      "execution_count": 6,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -363,7 +338,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 20
         }
       ]
     },
@@ -372,16 +347,16 @@
       "metadata": {
         "id": "a18HO9K8saiI",
         "colab_type": "code",
-        "outputId": "4390e480-7012-47d7-d47c-b42496fb2df4",
+        "outputId": "287434ed-ffc7-468c-96db-7dfb451aa159",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 517
+          "height": 513
         }
       },
       "source": [
         "df_aca_r.head()"
       ],
-      "execution_count": 7,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -531,7 +506,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 7
+          "execution_count": 21
         }
       ]
     },
@@ -569,16 +544,16 @@
       "metadata": {
         "id": "VXoVQg4VLO4l",
         "colab_type": "code",
-        "outputId": "43d29b46-f58d-4b92-de89-2fb7c11d4357",
+        "outputId": "9a9928bc-a811-4384-f76d-515c1bbd71d4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 169
+          "height": 168
         }
       },
       "source": [
         "df_aca_r[df_aca_r.pmid == 29956882]"
       ],
-      "execution_count": 10,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -652,7 +627,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 10
+          "execution_count": 24
         }
       ]
     },
@@ -675,16 +650,16 @@
       "metadata": {
         "id": "m33zMr9nL1Zc",
         "colab_type": "code",
-        "outputId": "5a935cec-cd4f-4504-fb11-eb8c9485db39",
+        "outputId": "182379ac-5fa4-4244-d223-e1feaa86bdbb",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "df_join.shape"
       ],
-      "execution_count": 12,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -696,7 +671,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 12
+          "execution_count": 26
         }
       ]
     },
@@ -715,16 +690,16 @@
       "metadata": {
         "id": "so0zCJ7pwnJ4",
         "colab_type": "code",
-        "outputId": "0054afb3-50f8-47d9-d47c-7407d8bee073",
+        "outputId": "5d9d6c0c-ae05-4657-ea02-3510bfb63d96",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "np.any(df_join.groupby(['pmid','PI_IDS']).size() > 1)"
       ],
-      "execution_count": 13,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -736,7 +711,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 13
+          "execution_count": 27
         }
       ]
     },
@@ -782,16 +757,16 @@
       "metadata": {
         "id": "E2yDVCD0xlMm",
         "colab_type": "code",
-        "outputId": "bcd31b4b-0c37-40cb-dd74-75db952f74ef",
+        "outputId": "17093900-2c54-4c92-907a-4e97aeb415c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "df_join_nr.shape"
       ],
-      "execution_count": 16,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -803,7 +778,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 16
+          "execution_count": 30
         }
       ]
     },
@@ -812,16 +787,16 @@
       "metadata": {
         "id": "3s4-xEwzyOu8",
         "colab_type": "code",
-        "outputId": "d14834f1-d0a2-4e02-bbfd-f75583c840fb",
+        "outputId": "262bb2af-3350-4fdc-8e54-faf8599702c5",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         }
       },
       "source": [
         "np.any(df_join_nr.groupby(['pmid','PI_IDS']).size() > 1)"
       ],
-      "execution_count": 17,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -833,7 +808,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 17
+          "execution_count": 31
         }
       ]
     },
@@ -861,6 +836,75 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vQg4fYthawK6",
+        "colab_type": "text"
+      },
+      "source": [
+        "Found that in the NIH dataset, the same pmid with the same last_author_name was given two dif. PI_IDS, which is an obvious flaw so we drop those duplicates so that our data is cleaner."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6t0_oibkTvVu",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "df_test = df_join.groupby(['pmid','last_author_name'])[['PI_IDS']].nunique()\n",
+        "df_test_fix = df_test[df_test.PI_IDS > 1].reset_index()\n",
+        "for row in df_test_fix.iterrows():\n",
+        "  t_pmid,t_lan,_ = row[1]\n",
+        "  df_fix = df_join[(df_join.pmid == t_pmid) & (df_join.last_author_name == t_lan)]\n",
+        "  f_pid = df_fix.iloc[0].PI_IDS\n",
+        "  df_join.loc[(df_join.pmid == t_pmid) & (df_join.last_author_name == t_lan),'PI_IDS'] = f_pid\n",
+        "df_join.drop_duplicates(subset=['pmid','last_author_name'], keep='first',inplace=True)\n",
+        "np.any(df_join.duplicated(subset=['pmid','last_author_name']))"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bcPA-CagaJBo",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "7d3aad2d-d831-426f-fcce-c856ae9244b3"
+      },
+      "source": [
+        "df_test = df_join_nr.groupby(['pmid','last_author_name'])[['PI_IDS']].nunique()\n",
+        "df_test_fix = df_test[df_test.PI_IDS > 1].reset_index()\n",
+        "for row in df_test_fix.iterrows():\n",
+        "  t_pmid,t_lan,_ = row[1]\n",
+        "  df_fix = df_join_nr[(df_join_nr.pmid == t_pmid) & (df_join_nr.last_author_name == t_lan)]\n",
+        "  f_pid = df_fix.iloc[0].PI_IDS\n",
+        "  df_join_nr.loc[(df_join_nr.pmid == t_pmid) & (df_join_nr.last_author_name == t_lan),'PI_IDS'] = f_pid\n",
+        "df_join_nr.drop_duplicates(subset=['pmid','last_author_name'], keep='first',inplace=True)\n",
+        "np.any(df_join_nr.duplicated(subset=['pmid','last_author_name']))"
+      ],
+      "execution_count": 96,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 96
+        }
+      ]
     },
     {
       "cell_type": "markdown",
