Removed duplicates of 'PI_IDS' with two dif. last_author_name, had same name with dif. initials

--- a/code/1_merged_datasets_for_labeled_data.ipynb
+++ b/code/1_merged_datasets_for_labeled_data.ipynb
@@ -51,10 +51,10 @@
       "metadata": {
         "id": "Yym1cREsbgcZ",
         "colab_type": "code",
-        "outputId": "47829088-d586-49d5-8e03-fa78159c74ed",
+        "outputId": "2dd8cf12-d677-4a59-efe8-180893a6feab",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 68
+          "height": 547
         }
       },
       "source": [
@@ -74,13 +74,27 @@
       "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
-          "text": [
-            "User name: ShaulSolomon\n",
-            "Password: ··········\n",
-            "/content/AYP/code\n"
-          ],
-          "name": "stdout"
+          "output_type": "error",
+          "ename": "KeyboardInterrupt",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    728\u001b[0m             \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 729\u001b[0;31m                 \u001b[0mident\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreply\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msession\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin_socket\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    730\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/jupyter_client/session.py\u001b[0m in \u001b[0;36mrecv\u001b[0;34m(self, socket, mode, content, copy)\u001b[0m\n\u001b[1;32m    802\u001b[0m         \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 803\u001b[0;31m             \u001b[0mmsg_list\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0msocket\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv_multipart\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    804\u001b[0m         \u001b[0;32mexcept\u001b[0m \u001b[0mzmq\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mZMQError\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/sugar/socket.py\u001b[0m in \u001b[0;36mrecv_multipart\u001b[0;34m(self, flags, copy, track)\u001b[0m\n\u001b[1;32m    474\u001b[0m         \"\"\"\n\u001b[0;32m--> 475\u001b[0;31m         \u001b[0mparts\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrecv\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mflags\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrack\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mtrack\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    476\u001b[0m         \u001b[0;31m# have first part already, only loop while more to receive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket.Socket.recv\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32mzmq/backend/cython/socket.pyx\u001b[0m in \u001b[0;36mzmq.backend.cython.socket._recv_copy\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/zmq/backend/cython/checkrc.pxd\u001b[0m in \u001b[0;36mzmq.backend.cython.checkrc._check_rc\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: ",
+            "\nDuring handling of the above exception, another exception occurred:\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-74e049d87248>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgetpass\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mgetpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0muser\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'User name: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0mpassword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mgetpass\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Password: '\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mpassword\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0murllib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mparse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquote\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpassword\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# your password is converted into url format\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    702\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    703\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 704\u001b[0;31m             \u001b[0mpassword\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    705\u001b[0m         )\n\u001b[1;32m    706\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.6/dist-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    732\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    733\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 734\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    735\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    736\u001b[0m                 \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+          ]
         }
       ]
     },
@@ -97,34 +111,9 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "enw7L2BAZnpG",
-        "colab_type": "code",
-        "outputId": "8d31fb72-19a2-4583-b6a9-e24625003ca9",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        }
-      },
-      "source": [
-        "%cd code"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/content/AYP/code\n"
-          ],
-          "name": "stdout"
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "qAgD483hbxQk",
         "colab_type": "code",
-        "outputId": "325ff8b1-9d9e-4dd5-8597-5d3026c8304a",
+        "outputId": "b956fa03-fecd-455d-a980-f4cf74463116",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 71
@@ -144,7 +133,7 @@
         "PATH = \"data/labeled_dataset/\"\n",
         "FILE = \"NIH_postcleaning_large.csv\""
       ],
-      "execution_count": 11,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -161,7 +150,7 @@
       "metadata": {
         "id": "43Y6-gmsO7Q_",
         "colab_type": "code",
-        "outputId": "bfab15f0-ae20-4e57-cd47-47d5aefe9cbb",
+        "outputId": "1a11b0c2-e45c-4699-907b-06adf0344e2d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -171,7 +160,7 @@
         "import importlib\n",
         "importlib.reload(utils)"
       ],
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +172,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 18
+          "execution_count": 6
         }
       ]
     },
@@ -192,7 +181,7 @@
       "metadata": {
         "id": "oSixCsaPqmar",
         "colab_type": "code",
-        "outputId": "6893a440-4abe-4f03-fd2c-536f9d418fdd",
+        "outputId": "1bee374e-bbc5-43ca-d0e4-936cf96096a4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 68
@@ -219,7 +208,7 @@
         "df_aca_nr = utils.get_dataframe_from_s3(file=\"academix_not_enriched.csv\")\n",
         "df_aca_nr.drop('Unnamed: 0',axis=1, inplace=True)"
       ],
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -247,7 +236,7 @@
       "metadata": {
         "id": "Wv6uwVXYTN1g",
         "colab_type": "code",
-        "outputId": "dae8fc33-02de-4851-9214-adde78077dc5",
+        "outputId": "49332a30-5fc6-4ee1-8c50-fe86542512b5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
@@ -256,7 +245,7 @@
       "source": [
         "df_nih.head()"
       ],
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -338,7 +327,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 8
         }
       ]
     },
@@ -347,7 +336,7 @@
       "metadata": {
         "id": "a18HO9K8saiI",
         "colab_type": "code",
-        "outputId": "287434ed-ffc7-468c-96db-7dfb451aa159",
+        "outputId": "c486ada8-467d-4c91-f895-dbeec8f21080",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 513
@@ -356,7 +345,7 @@
       "source": [
         "df_aca_r.head()"
       ],
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -506,7 +495,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 21
+          "execution_count": 9
         }
       ]
     },
@@ -544,7 +533,7 @@
       "metadata": {
         "id": "VXoVQg4VLO4l",
         "colab_type": "code",
-        "outputId": "9a9928bc-a811-4384-f76d-515c1bbd71d4",
+        "outputId": "8ff3c53a-7148-4c77-adc0-6dc3ed2e5618",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 168
@@ -553,7 +542,7 @@
       "source": [
         "df_aca_r[df_aca_r.pmid == 29956882]"
       ],
-      "execution_count": 24,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -627,7 +616,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 24
+          "execution_count": 12
         }
       ]
     },
@@ -650,7 +639,7 @@
       "metadata": {
         "id": "m33zMr9nL1Zc",
         "colab_type": "code",
-        "outputId": "182379ac-5fa4-4244-d223-e1feaa86bdbb",
+        "outputId": "e4cff601-7b89-4791-8558-e7242028336b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -659,7 +648,7 @@
       "source": [
         "df_join.shape"
       ],
-      "execution_count": 26,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -671,7 +660,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 26
+          "execution_count": 14
         }
       ]
     },
@@ -690,7 +679,7 @@
       "metadata": {
         "id": "so0zCJ7pwnJ4",
         "colab_type": "code",
-        "outputId": "5d9d6c0c-ae05-4657-ea02-3510bfb63d96",
+        "outputId": "24e2f9ed-a122-4354-ec9c-4fbb68ec8cd5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -699,7 +688,7 @@
       "source": [
         "np.any(df_join.groupby(['pmid','PI_IDS']).size() > 1)"
       ],
-      "execution_count": 27,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -711,7 +700,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 15
         }
       ]
     },
@@ -757,7 +746,7 @@
       "metadata": {
         "id": "E2yDVCD0xlMm",
         "colab_type": "code",
-        "outputId": "17093900-2c54-4c92-907a-4e97aeb415c4",
+        "outputId": "c5a6861c-45a2-42ae-dfd1-2e65b953b9db",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -766,7 +755,7 @@
       "source": [
         "df_join_nr.shape"
       ],
-      "execution_count": 30,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -778,7 +767,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 30
+          "execution_count": 18
         }
       ]
     },
@@ -787,7 +776,7 @@
       "metadata": {
         "id": "3s4-xEwzyOu8",
         "colab_type": "code",
-        "outputId": "262bb2af-3350-4fdc-8e54-faf8599702c5",
+        "outputId": "a38cacc5-5c5f-460b-fac8-22fb56c42c31",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -796,7 +785,7 @@
       "source": [
         "np.any(df_join_nr.groupby(['pmid','PI_IDS']).size() > 1)"
       ],
-      "execution_count": 31,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -808,7 +797,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 31
+          "execution_count": 19
         }
       ]
     },
@@ -852,7 +841,11 @@
       "metadata": {
         "id": "6t0_oibkTvVu",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "c2582817-faaf-4f68-dd26-222eaa27fc6a"
       },
       "source": [
         "df_test = df_join.groupby(['pmid','last_author_name'])[['PI_IDS']].nunique()\n",
@@ -865,8 +858,21 @@
         "df_join.drop_duplicates(subset=['pmid','last_author_name'], keep='first',inplace=True)\n",
         "np.any(df_join.duplicated(subset=['pmid','last_author_name']))"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 21
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -877,7 +883,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "7d3aad2d-d831-426f-fcce-c856ae9244b3"
+        "outputId": "0670fae1-3b27-488e-f847-03b100eefed0"
       },
       "source": [
         "df_test = df_join_nr.groupby(['pmid','last_author_name'])[['PI_IDS']].nunique()\n",
@@ -890,7 +896,7 @@
         "df_join_nr.drop_duplicates(subset=['pmid','last_author_name'], keep='first',inplace=True)\n",
         "np.any(df_join_nr.duplicated(subset=['pmid','last_author_name']))"
       ],
-      "execution_count": 96,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -902,9 +908,53 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 96
+          "execution_count": 22
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "Wyf6WtA-cXaJ",
+        "colab_type": "text"
+      },
+      "source": [
+        "Also need to ensure that for each PI_IDS there is only one last_author_name:"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LOD56H-ObODw",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test =df_join.groupby('PI_IDS')[['last_author_name']].nunique()\n",
+        "fix_PIIDS = test[test.last_author_name > 1].index\n",
+        "for pid in fix_PIIDS:\n",
+        "  longest_name = max(list(df_join[df_join.PI_IDS == pid].last_author_name.unique()),key=len)\n",
+        "  df_join.loc[df_join.PI_IDS == pid,'last_author_name'] = longest_name"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QP9bwokWdll6",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "test = df_join_nr.groupby('PI_IDS')[['last_author_name']].nunique()\n",
+        "fix_PIIDS = test[test.last_author_name > 1].index\n",
+        "for pid in fix_PIIDS:\n",
+        "  longest_name = max(list(df_join_nr[df_join_nr.PI_IDS == pid].last_author_name.unique()),key=len)\n",
+        "  df_join_nr.loc[df_join_nr.PI_IDS == pid,'last_author_name'] = longest_name"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
